update hero section with internationalization

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -9,7 +9,7 @@
     "nav-item-5": "Contact"
   },
   "hero": {
-    "title": "Hello, my name is",
+    "title": "Hello, my name",
     "name": "I'm a Full Stack Developer",
     "description": "I create beautiful and functional web applications using modern technologies to help and solve the problems. Passionate about user experience and innovative solutions."
   }
