--- a/src/translation/id.json
+++ b/src/translation/id.json
@@ -9,7 +9,7 @@
     "nav-item-5": "Kontak"
   },
   "hero": {
-    "title": "Halo, nama saya",
+    "title": "Hallo, nama saya",
     "name": "Saya adalah Full Stack Developer",
     "description": "Saya membuat web yang indah dan fungsional menggunakan teknologi modern untuk membantu dan memecahkan masalah. Saya sangat tertarik dengan pengalaman pengguna dan solusi inovatif."
   }
