update hero sections

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -9,9 +9,9 @@
     "nav-item-5": "Contact"
   },
   "hero": {
-    "title": "Hello, my name",
+    "title": "Hello, I'm Faqih",
     "name": "I'm a Full Stack Developer",
-    "description": "I create beautiful and functional web applications using modern technologies to help and solve the problems. Passionate about user experience and innovative solutions."
+    "description": "Blending 9 years of experience as an HR with Full Stack Development expertise. I help businesses digitally transform with innovative application solutions."
   },
   "experience": {
     "description-1": "Leading the development of scalable web applications using modern technologies. Mentoring junior developers and architecting solutions for complex business requirements.",
