--- a/src/translation/id.json
+++ b/src/translation/id.json
@@ -9,9 +9,9 @@
     "nav-item-5": "Kontak"
   },
   "hero": {
-    "title": "Hallo, nama saya",
+    "title": "Hallo, saya Faqih",
     "name": "Saya adalah Full Stack Developer",
-    "description": "Saya membuat web yang indah dan fungsional menggunakan teknologi modern untuk membantu dan memecahkan masalah. Saya sangat tertarik dengan pengalaman pengguna dan solusi inovatif."
+    "description": "Memadukan 9 tahun pengalaman sebagai HR dengan keahlian Full Stack Development. Saya membantu bisnis bertransformasi digital dengan solusi aplikasi yang inovatif."
   },
   "experience": {
     "description-1": "Memimpin pengembangan aplikasi web yang skalabel menggunakan teknologi modern. Membimbing pengembang junior dan merancang solusi untuk kebutuhan bisnis yang kompleks.",
